--- a/templates/instrument/index.html.twig
+++ b/templates/instrument/index.html.twig
@@ -3,30 +3,20 @@
 {% block title %}Instrument index{% endblock %}
 
 {% block body %}
-    <h1>Instrument index</h1>
+    <h1>Liste instruments</h1>
 
     <table class="table">
         <thead>
             <tr>
-                <th>Id</th>
-                <th>NumSerie</th>
-                <th>DateAchat</th>
-                <th>PrixAchat</th>
-                <th>Utilisation</th>
-                <th>CheminImage</th>
+                <th>Instruments</th>
                 <th>actions</th>
             </tr>
         </thead>
         <tbody>
         {% for instrument in instruments %}
             <tr>
-                <td>{{ instrument.id }}</td>
-                <td>{{ instrument.numSerie }}</td>
-                <td>{{ instrument.dateAchat ? instrument.dateAchat|date('Y-m-d') : '' }}</td>
-                <td>{{ instrument.prixAchat }}</td>
-                <td>{{ instrument.utilisation }}</td>
-                <td>{{ instrument.cheminImage }}</td>
                 <td>
+                    {{ instrument.typeInstrument.libelle ?? 'Nom non disponible' }}
                     <a href="{{ path('app_instrument_show', {'id': instrument.id}) }}">show</a>
                     <a href="{{ path('app_instrument_edit', {'id': instrument.id}) }}">edit</a>
                 </td>
