--- a/templates/instrument/index.html.twig
+++ b/templates/instrument/index.html.twig
@@ -1,33 +1,36 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Instrument index{% endblock %}
+{% block title %}eMusic : Instruments{% endblock %}
 
 {% block body %}
-    <h1>Liste instruments</h1>
+    <h1>Liste des instruments disponibles</h1>
 
     <table class="table">
         <thead>
             <tr>
                 <th>Instruments</th>
-                <th>actions</th>
+                <th>Marque</th>
+                <th>Couleur</th>
+                <th>Actions</th>
             </tr>
         </thead>
         <tbody>
         {% for instrument in instruments %}
             <tr>
+                <td>{{ instrument.typeInstrument.libelle }}</td>
+                <td>{{ instrument.Marque.libelle }}</td>
+                <td>{{ instrument.Couleur.Nom }}</td>
                 <td>
-                    {{ instrument.typeInstrument.libelle ?? 'Nom non disponible' }}
-                    <a href="{{ path('app_instrument_show', {'id': instrument.id}) }}">show</a>
-                    <a href="{{ path('app_instrument_edit', {'id': instrument.id}) }}">edit</a>
+                    <a href="{{ path('app_instrument_show', {'id': instrument.id}) }}">Consulter</a>
+                    <a href="{{ path('app_instrument_edit', {'id': instrument.id}) }}">Modifier</a>
                 </td>
             </tr>
         {% else %}
             <tr>
-                <td colspan="7">no records found</td>
+                <td colspan="7">Aucune données trouvées</td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
-
-    <a href="{{ path('app_instrument_new') }}">Create new</a>
+    <a href="{{ path('app_instrument_new') }}">Créer nouveau</a>
 {% endblock %}
