--- a/templates/instrument/_delete_form.html.twig
+++ b/templates/instrument/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('app_instrument_delete', {'id': instrument.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('app_instrument_delete', {'id': instrument.id}) }}" onsubmit="return confirm('Vous êtes sûr de vouloir supprimer cet instrument ?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ instrument.id) }}">
     <button class="btn">Delete</button>
 </form>
