--- a/templates/instrument/edit.html.twig
+++ b/templates/instrument/edit.html.twig
@@ -1,13 +1,14 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Instrument{% endblock %}
+{% block title %}Modifier l'instrument{% endblock %}
 
 {% block body %}
+
     <h1>Edit Instrument</h1>
 
-    {{ include('instrument/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('instrument/_form.html.twig', {'button_label': 'Mise à jour'}) }}
 
-    <a href="{{ path('app_instrument_index') }}">back to list</a>
+    <a href="{{ path('app_instrument_index') }}">Retour à la liste</a>
 
     {{ include('instrument/_delete_form.html.twig') }}
 {% endblock %}
