Ajout des images de chacun des instruments

--- a/templates/instrument/show.html.twig
+++ b/templates/instrument/show.html.twig
@@ -11,7 +11,7 @@
 
             {% set photo = 'img/instrument/' ~ instrument.id ~'.jpg' %}
             <span class="zoom">
-            <img src="{{ asset(photo) }}" title="{{ instrument.typeInstrument.libelle ~ ' ' ~ instrument.Marque.libelle}}" width="480" height="500"/>
+            <img src="{{ asset(photo) }}" title="{{ instrument.typeInstrument.libelle ~ ' ' ~ instrument.Marque.libelle}}" width ="300" />
             </span>
             
             <tr>
