--- a/templates/cours/_delete_form.html.twig
+++ b/templates/cours/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('app_cours_delete', {'id': cour.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('app_cours_delete', {'id': cour.id}) }}" onsubmit="return confirm('Vous êtes sûr de vouloir supprimer ce cour ?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ cour.id) }}">
-    <button class="btn">Delete</button>
+    <button class="btn">Supprimer</button>
 </form>
