--- a/templates/cours/edit.html.twig
+++ b/templates/cours/edit.html.twig
@@ -1,13 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Cours{% endblock %}
+{% block title %}Editer Cours{% endblock %}
 
 {% block body %}
-    <h1>Edit Cours</h1>
+    <h1>Editer Cours</h1>
 
     {{ include('cours/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('app_cours_index') }}">back to list</a>
+    <a href="{{ path('app_cours_index') }}">Retour à la liste</a>
 
     {{ include('cours/_delete_form.html.twig') }}
 {% endblock %}
