--- a/templates/cours/index.html.twig
+++ b/templates/cours/index.html.twig
@@ -3,12 +3,11 @@
 {% block title %}Liste des cours{% endblock %}
 
 {% block body %}
-<h1>Liste des cours</h1>
+<h1>Liste des cours de musique</h1>
 
 <table class="table">
     <thead>
         <tr>
-            <th>Id</th>
             <th>Professeur du Cours</th>
             <th>Libelle</th>
             <th>AgeMini</th>
@@ -19,7 +18,6 @@
     <tbody>
         {% for cour in cours %}
             <tr>
-                <td>{{ cour.id }}</td>
                 <td>
                     {# lien vers la page du professeur #}
                     <a href="{{ path('app_professeur_show', {'id': cour.professeur.id}) }}">
