--- a/templates/cours/new.html.twig
+++ b/templates/cours/new.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Cours{% endblock %}
+{% block title %}Ajouter un cour{% endblock %}
 
 {% block body %}
-    <h1>Create new Cours</h1>
+    <h1>Créer un cour</h1>
 
     {{ include('cours/_form.html.twig') }}
 
-    <a href="{{ path('app_cours_index') }}">back to list</a>
+    <a href="{{ path('app_cours_index') }}">Retour à la liste</a>
 {% endblock %}
