--- a/templates/cours/show.html.twig
+++ b/templates/cours/show.html.twig
@@ -26,9 +26,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_cours_index') }}">back to list</a>
+    <a href="{{ path('app_cours_index') }}">Retour à la liste</a>
 
-    <a href="{{ path('app_cours_edit', {'id': cour.id}) }}">edit</a>
+    <a href="{{ path('app_cours_edit', {'id': cour.id}) }}">Modifier</a>
 
     {{ include('cours/_delete_form.html.twig') }}
 {% endblock %}
