--- a/templates/contrat_pret/index.html.twig
+++ b/templates/contrat_pret/index.html.twig
@@ -27,7 +27,9 @@
                 <td>{{ contrat_pret.attestationAssurance }}</td>
                 <td>{{ contrat_pret.etatDetailleDebut }}</td>
                 <td>{{ contrat_pret.etatDetailleRetour }}</td>
-                <td><a href="{{ path('app_contrat_pret_show', {'id': contrat_pret.eleve.id}) }}">{{ contrat_pret.eleve.nom }}</a></td>
+                <td><a href="{{ path('app_contrat_pret_show', {'id': contrat_pret.eleves_id}) }}">{{ contrat_pret.eleves.nom }}</a></td>
+                <>
+                
                 <td>
                     <a href="{{ path('app_contrat_pret_show', {'id': contrat_pret.id}) }}">show</a>
                     <a href="{{ path('app_contrat_pret_edit', {'id': contrat_pret.id}) }}">edit</a>
