--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -324,6 +324,8 @@ footer {
           <a href="{{ path('app_intervention_index') }}">Interventions</a>
         
           <a href="{{ path('app_professeur_index') }}">Professeurs</a>
+
+          <a href="{{ path('app_contrat_pret_index') }}">Contrats Prêts</a>
         </nav>
       
     </header>
@@ -357,6 +359,8 @@ footer {
           <a href="{{ path('app_intervention_index') }}">Interventions</a>
         
           <a href="{{ path('app_professeur_index') }}">Professeurs</a>
+
+          <a href="{{ path('app_contrat_pret_index') }}">Contrats Prêts</a>
       </ul>
     </div>
 
