--- a/templates/contrat_pret/index.html.twig
+++ b/templates/contrat_pret/index.html.twig
@@ -9,13 +9,13 @@
         <thead>
             <tr>
                 <th>Instrument</th>
-                <th>DateDebut</th>
-                <th>DateFin</th>
-                <th>AttestationAssurance</th>
-                <th>EtatDetailleDebut</th>
-                <th>EtatDetailleRetour</th>
-                <th>eleves</th>
-                <th>actions</th>
+                <th>Date Debut</th>
+                <th>Date Fin</th>
+                <th>Attestation Assurance</th>
+                <th>Etat Detaille Debut</th>
+                <th>Etat Detaille Retour</th>
+                <th>Eleves</th>
+                <th>Actions</th>
             </tr>
         </thead>
         <tbody>
@@ -28,7 +28,7 @@
                 <td>{{ contrat_pret.etatDetailleDebut }}</td>
                 <td>{{ contrat_pret.etatDetailleRetour }}</td>
                 <td><a href="{{ path('app_contrat_pret_show', {'id': contrat_pret.eleves_id}) }}">{{ contrat_pret.eleves.nom }}</a></td>
-                <>
+                
                 
                 <td>
                     <a href="{{ path('app_contrat_pret_show', {'id': contrat_pret.id}) }}">show</a>
