--- a/templates/intervention/show.html.twig
+++ b/templates/intervention/show.html.twig
@@ -28,8 +28,8 @@
                 <td>{{ intervention.prix }}</td>
             </tr>
             <tr>
-                <th>Quotitent</th>
-                <td>{{ intervention.quotitent }}</td>
+                <th>Quotient</th>
+                <td>{{ intervention.quotient }}</td>
             </tr>
         </tbody>
     </table>
