--- a/templates/instrument/index.html.twig
+++ b/templates/instrument/index.html.twig
@@ -36,5 +36,7 @@
         {% endfor %}
         </tbody>
     </table>
+    <button class="btn">
     <a href="{{ path('app_instrument_new') }}">Créer nouveau</a>
+    </button>
 {% endblock %}
