--- a/templates/instrument/show.html.twig
+++ b/templates/instrument/show.html.twig
@@ -13,34 +13,84 @@
             <span class="zoom">
             <img src="{{ asset(photo) }}" title="{{ instrument.typeInstrument.libelle ~ ' ' ~ instrument.Marque.libelle}}" width ="300" />
             </span>
-            
             <tr>
-                <th>Classe</th>
-                <td>{{ instrument.typeInstrument.classInstru.libelle }}</td>
+                <th>Numéro de série</th>
+                <td>{{ instrument.numSerie }}</td>
             </tr>
 
             <tr>
                 <th>Prix</th>
                 <td>{{ instrument.prixAchat }}</td>
             </tr>
+
+            <tr>
+                <th>Classe</th>
+                <td>{{ instrument.typeInstrument.classInstru.libelle }}</td>
+            </tr>
+
+            <tr>
+                <th>Type</th>
+                <td>{{ instrument.typeInstrument.libelle }}</td>
+            </tr>
+
+            <tr>
+                <th>Couleur</th>
+                <td>{{ instrument.Couleur.Nom }}</td>
+            </tr>
+           
+            <tr>
+                <th>Marque</th>
+                <td>{{ instrument.Marque.libelle }}</td>
+            </tr>
+
             <tr>
                 <th>Date d'achat</th>
                 <td>{{ instrument.dateAchat ? instrument.dateAchat|date('d/m/Y') : '' }}</td>
             </tr>
+
             <tr>
                 <th>Utilisation</th>
                 <td>{{ instrument.utilisation }}</td>
             </tr>
+
             <tr>
-                <th>Numéro de série</th>
-                <td>{{ instrument.numSerie }}</td>
+                <th>Interventions</th>
+                <td>
+                    {% if instrument.interventions|length > 0 %}
+                        <ul>
+                            {% for intervention in instrument.interventions %}
+                                <li>
+                                    {{ intervention.descriptif }}
+                                    {% if intervention.dateDebut %}
+                                        (Début : {{ intervention.dateDebut|date('d/m/Y') }})
+                                    {% endif %}
+                                    {% if intervention.dateFin %}
+                                        (Fin : {{ intervention.dateFin|date('d/m/Y') }})
+                                    {% endif %}
+                                    {% if intervention.prix %}
+                                        (Prix : {{ intervention.prix }} €)
+                                    {% endif %}
+                                    {% if intervention.quotient %}
+                                        (Quotient : {{ intervention.quotient }})
+                                    {% endif %}
+                                </li>
+                            {% endfor %}
+                        </ul>
+                    {% else %}
+                        Aucune intervention
+                    {% endif %}
+                </td>
             </tr>
+
+            
         </tbody>
     </table>
-
+<button class="btn">
     <a href="{{ path('app_instrument_index') }}">Retour à la liste</a>
+</button>
     <br>
+<button class="btn">
     <a href="{{ path('app_instrument_edit', {'id': instrument.id}) }}">Modifier</a>
-
+</button>
     {{ include('instrument/_delete_form.html.twig') }}
 {% endblock %}
