--- a/templates/contrat_pret/index.html.twig
+++ b/templates/contrat_pret/index.html.twig
@@ -21,13 +21,13 @@
         <tbody>
         {% for contrat_pret in contrat_prets %}
             <tr>
-                <td><a href="{{ path('app_contrat_pret_show', {'id': contrat_pret.instrument.id}) }}">{{ contrat_pret.instrument.numSerie }}</a></td>
+                <td><a href="{{ path('app_instrument_show', {'id': contrat_pret.instrument.id}) }}">{{ contrat_pret.instrument.numSerie }}</a></td>
                 <td>{{ contrat_pret.dateDebut ? contrat_pret.dateDebut|date('Y-m-d') : '' }}</td>
                 <td>{{ contrat_pret.dateFin ? contrat_pret.dateFin|date('Y-m-d') : '' }}</td>
                 <td>{{ contrat_pret.attestationAssurance }}</td>
                 <td>{{ contrat_pret.etatDetailleDebut }}</td>
                 <td>{{ contrat_pret.etatDetailleRetour }}</td>
-                <td><a href="{{ path('app_contrat_pret_show', {'id': contrat_pret.eleves_id}) }}">{{ contrat_pret.eleves.nom }}</a></td>
+                <td><a href="{{ path('app_eleves_show', {'id': contrat_pret.eleves_id}) }}">{{ contrat_pret.eleves.nom }}</a></td>
                 
                 
                 <td>
