--- a/templates/contrat_pret/index.html.twig
+++ b/templates/contrat_pret/index.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}ContratPret index{% endblock %}
+{% block title %}Contrat Pret{% endblock %}
 
 {% block body %}
-    <h1>ContratPret index</h1>
+    <h1>Contrat Pret</h1>
 
     <table class="table">
         <thead>
@@ -31,8 +31,8 @@
                 
                 
                 <td>
-                    <a href="{{ path('app_contrat_pret_show', {'id': contrat_pret.id}) }}">show</a>
-                    <a href="{{ path('app_contrat_pret_edit', {'id': contrat_pret.id}) }}">edit</a>
+                    <a href="{{ path('app_contrat_pret_show', {'id': contrat_pret.id}) }}">Consulter</a>
+                    <a href="{{ path('app_contrat_pret_edit', {'id': contrat_pret.id}) }}">Modifier</a>
                 </td>
             </tr>
         {% else %}
