--- a/templates/eleves/index.html.twig
+++ b/templates/eleves/index.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Eleves index{% endblock %}
+{% block title %}Eleves{% endblock %}
 
 {% block body %}
-    <h1>Eleves index</h1>
+    <h1>Eleves</h1>
 
     <table class="table">
         <thead>
@@ -11,7 +11,7 @@
                 <th>Id</th>
                 <th>Nom</th>
                 <th>Prenom</th>
-                <th>Date_naiss</th>
+                <th>Date Naissance</th>
                 <th>actions</th>
             </tr>
         </thead>
