--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -346,22 +346,12 @@ footer {
 
     <!-- Navigation rapide -->
     <div class="footer-nav">
-      <h3>Liens rapides</h3>
-      <ul>
-          <a href="{{ path('app_accueil') }}">Accueil</a>
-        
-          <a href="{{ path('app_instrument_index') }}">Instruments</a>
-        
-          <a href="{{ path('app_eleves_index') }}">Élèves</a>
-        
-          <a href="{{ path('app_cours_index') }}">Cours</a>
-        
-          <a href="{{ path('app_intervention_index') }}">Interventions</a>
-        
-          <a href="{{ path('app_professeur_index') }}">Professeurs</a>
-
-          <a href="{{ path('app_contrat_pret_index') }}">Contrats Prêts</a>
-      </ul>
+      <div class="footer-social">
+      <h3>Suivez-nous</h3>
+      <a href="#" aria-label="Facebook">Facebook</a>
+      <a href="#" aria-label="Twitter">Twitter</a>
+      <a href="#" aria-label="LinkedIn">LinkedIn</a>
+    </div>
     </div>
 
   </div>
