--- a/templates/contrat_pret/index.html.twig
+++ b/templates/contrat_pret/index.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}ContratPret index{% endblock %}
+{% block title %}Contrat Pret{% endblock %}
 
 {% block body %}
-    <h1>ContratPret index</h1>
+    <h1>Contrat Pret</h1>
 
     <table class="table">
         <thead>
