--- a/templates/intervention/index.html.twig
+++ b/templates/intervention/index.html.twig
@@ -21,7 +21,7 @@
         <tbody>
         {% for intervention in interventions %}
             <tr>
-                <td><a href="{{ path('app_intervention_show', {'id': intervention.instrument.id}) }}">{{ intervention.instrument.numSerie }}</a></td>
+                <td><a href="{{ path('app_instrument_show', {'id': intervention.instrument.id}) }}">{{ intervention.instrument.numSerie }}</a></td>
                 <td>{{ intervention.dateDebut ? intervention.dateDebut|date('Y-m-d') : '' }}</td>
                 <td>{{ intervention.dateFin ? intervention.dateFin|date('Y-m-d') : '' }}</td>
                 <td>{{ intervention.descriptif }}</td>
