--- a/templates/professeur/index.html.twig
+++ b/templates/professeur/index.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Professeur index{% endblock %}
+{% block title %}Professeur{% endblock %}
 
 {% block body %}
-    <h1>Professeur index</h1>
+    <h1>Professeur</h1>
 
     <table class="table">
         <thead>
