Modification isntrument, ajout d'informations

--- a/templates/instrument/index.html.twig
+++ b/templates/instrument/index.html.twig
@@ -10,6 +10,9 @@
             <tr>
                 <th>Instruments</th>
                 <th>Numéro de série</th>
+                <th>Date d'achat</th>
+                <th>Prix d'achat</th>
+                <th>Utilisation</th>
                 <th>Marque</th>
                 <th>Couleur</th>
                 <th>Prêt</th>
@@ -21,6 +24,9 @@
             <tr>
                 <td>{{ instrument.typeInstrument.libelle }}</td>
                 <td>{{ instrument.numSerie }}</td>
+                <td>{{ instrument.dateAchat ? instrument.dateAchat|date('d/m/Y') : '' }} </td>
+                <td>{{ instrument.prixAchat }} €</td>
+                <td>{{ instrument.utilisation }}</td>
                 <td>{{ instrument.Marque.libelle }}</td>
                 <td>{{ instrument.Couleur.Nom }}</td>
                 <td><a href="{{ path('app_contrat_pret_show', {'id': instrument.id}) }}"/>Contrat</td>
