date cours fini

--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -75,7 +75,7 @@ Dotée de locaux modernes et d’une équipe pédagogique de seize enseignants p
                     <td>{{ cour.libelle }}</td>
                     <td>{{ cour.ageMini }}</td>
                     <td>{{ cour.ageMaxi }}</td>
-                    <td>{{ cour.dateCours|date('d/m/Y') }}</td>
+                    <td>{{ cour.dateCours }}</td>
                     <td>{{ cour.heureDebut|date('H:i') }}</td>
                     <td>{{ cour.heureFin|date('H:i') }}</td>
                     <td>
