--- a/templates/cours/index.html.twig
+++ b/templates/cours/index.html.twig
@@ -28,7 +28,7 @@
                 <td>{{ cour.libelle }}</td>
                 <td>{{ cour.ageMini }}</td>
                 <td>{{ cour.ageMaxi }}</td>
-                <td>{{ cour.dateCours|date('d/m/Y') }}</td>
+                <td>{{ cour.dateCours}}</td>
                 <td>
                     <a href="{{ path('app_cours_show', {'id': cour.id}) }}">Voir</a> |
                     <a href="{{ path('app_cours_edit', {'id': cour.id}) }}">Modifier</a>
