--- a/templates/cours/show.html.twig
+++ b/templates/cours/show.html.twig
@@ -31,7 +31,7 @@
             </tr>
             <tr>
                 <th>Date du Cours</th>
-                <td>{{ cour.dateCours|date('d/m/Y') }}</td>
+                <td>{{ cour.dateCours }}</td>
             </tr>
             <tr>
                 <th>Heure de Début</th>
